# JsonDB

./: CMakeLists.txt  LICENSE  README  README.md  docker-compose.yaml  makefile
.github/workflows/: c-cpp.yml
lib/: JsonDb.c  JsonDb.h  idk.c  idk.h
src/: data.json  testLib.c
